--- a/algorithm-test/pom.xml
+++ b/algorithm-test/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>algorithm-common</artifactId>
+    <artifactId>algorithm-test</artifactId>
 
     <dependencies>
         <dependency>
