--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 
     <modules>
         <module>algorithm-sort</module>
+        <module>algorithm-subarray</module>
+        <module>algorithm-common</module>
+        <module>algorithm-test</module>
     </modules>
 
     <dependencyManagement>
@@ -46,6 +49,15 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/Performance*.java</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
