--- a/algorithm-sort/pom.xml
+++ b/algorithm-sort/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.shaoxi.algorithm</groupId>
+            <artifactId>algorithm-test</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
